--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Courier;
   font-weight: 600;
   word-spacing: 6px;
   scrollbar-width: none;
@@ -1029,7 +1029,7 @@ form {
   /* gap: 20%; */
   margin: 80px 10px;
   margin-top: 5em;
-  width: 100%;
+  width: 95%;
 }
 
 .lower-profile {
@@ -1045,7 +1045,7 @@ form {
   width: 100%;
   height: 500px;
   padding: 10px;
-  font-size: 26px;
+  font-size: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1192,7 +1192,7 @@ form {
   width: 90%;
   height: 220px;
   padding: 10px ;
-  font-size: 28px;
+  font-size: 18px;
   margin: 40px auto;
   border-radius: 12px;
   text-align: center;
@@ -1203,6 +1203,7 @@ form {
   box-sizing: border-box;
   background-color: rgb(157, 97, 1);
   box-shadow: 0 0 8px 1px;
+  overflow: hidden;
 }
 
 .change-icon-size {
@@ -1332,6 +1333,7 @@ form {
   border-radius: 12px;
   text-align: center;
   margin-left: -10%;
+  color: white;
   margin-right: 35%;
 }
 
