--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: cursive;
+  font-family: fantasy;
   font-weight: 600;
   word-spacing: 6px;
   scrollbar-width: none;
