--- a/portfolio.css
+++ b/portfolio.css
@@ -12,14 +12,12 @@ body {
   overflow-y: none;
   margin: 0;
   max-width: 100%;
-  /* background-color: blueviolet; */
   padding: 0;
   overflow-X: hidden;
-  font-family: cursive;
 }
 
 .top {
-  background-image: radial-gradient(rgb(255, 177, 33), rgb(225, 129, 12), rgb(186, 96, 0));
+  background-image: radial-gradient(rgb(255, 177, 33), rgb(223, 141, 40), rgb(186, 96, 0));
   width: 100%;
   height: 100vh;
   margin-right: 0;
@@ -51,7 +49,7 @@ body {
 .round-color {
   width: 180px;
   height: 180px;
-  background-color: gray;
+  background-color: aliceblue;
   border-radius: 10000px;
   box-shadow: 0 0 22px 1px;
   margin-bottom: 2em;
@@ -76,7 +74,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin: 50px 0px;
-  font-size: 23px;
+  font-size: 15px;
   gap: 25px;
   align-items: center;
   margin-bottom: -3px;
@@ -94,7 +92,7 @@ body {
   padding-top: 3rem;
   height: auto;
   align-items: center;
-  background-color: burlywood;
+  background-color: rgb(215, 246, 216);
   margin: auto;
   align-items: center;
   box-sizing: border-box;
@@ -128,14 +126,15 @@ h2 {
 }
 
 .detail {
-  width: 550px;
+  width: 560px;
   height: 500px;
   padding: 10px;
-  font-size: 27px;
+  font-size: 25px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 20px;
+  margin: 10px;
   /* background-color: aquamarine; */
   align-items: center;
 }
@@ -200,9 +199,9 @@ h2 {
 .resume-section {
   width: 100%;
   height: auto;
-  background-color: rgb(215, 246, 216);
+  /* background-color: rgb(215, 246, 216); */
   margin: auto;
-  padding: 3em 30px;
+  padding: 5em 30px;
   box-sizing: border-box;
   align-items: center;
 }
@@ -231,7 +230,8 @@ h2 {
 }
 
 .education span {
-  background-color: darkolivegreen;
+  background-color: gray;
+  color: white;
   border-radius: 12px;
   padding: 1px 10px;
 }
@@ -245,7 +245,7 @@ h2 {
   width: 6px;
   top: 0;
   height: 100%;
-  background-color: coral;
+  background-color: chocolate;
   overflow:visible;
   padding-top: 0px;
   box-sizing: border-box;
@@ -256,7 +256,7 @@ h2 {
 .sircle {
   width: 35px;
   height: 35px;
-  background-color: coral;
+  background-color: chocolate;
   border-radius: 20px;
   margin-left: -14px;
   margin-top: 100px;
@@ -283,16 +283,17 @@ h2 {
   margin: 30px;
   border-radius: 12px;
   width: 550px;
+  cursor: pointer;
 }
 
-.rsm-content:hover {
+/* .rsm-content:hover {
   border-color: rgb(29, 170, 189);
   transform: initial scaleX();
   transition: 1s ease-in-out;
   margin-top: 50px;
-  /* margin-left: 70px; */
+  margin-left: 70px;
   box-sizing: border-box;
-}
+} */
 
 .rsm2 {
   opacity: 0;
@@ -418,14 +419,14 @@ h2 {
   /* .......SERVICE SECTION....... */
 
   .service-section {
-    background-image: radial-gradient(rgb(255, 177, 33), rgb(225, 129, 12), rgb(186, 96, 0));
+    /* background-color: rgb(215, 246, 216); */
     height: auto;
     max-width: 100%;
     display: flex;
     margin: auto;
     flex-direction: column;
     align-items: center;
-    padding-top: 10em;
+    padding-top: 2em;
     color: white;
     font-weight: 600;
     font-size: 18px;
@@ -474,7 +475,6 @@ h2 {
   width: 100%;
   display: flex;
   flex-direction: column;
-  /* background-color: aquamarine; */
   align-items: center;
   margin-top: 10em;
   padding: 0;
@@ -497,7 +497,7 @@ h2 {
   grid-template-columns: repeat(4, 1fr);
   width: 100%;
   height: 98%;
-  margin: auto;
+  margin: 20px 140px;
   /* background-color: white; */
   padding-left: 4.5em;
 }
@@ -567,10 +567,8 @@ h2 {
 
 .horizontal-line-section {
   height: 70%;
-  /* margin-top: 1em; */
   margin-left: 3em;
   margin-bottom: 20em;
-  /* background-color: aliceblue; */
   align-items: center;
 }
 
@@ -580,7 +578,7 @@ h2 {
   border-left: 60% solid rgb(5, 71, 122);
   background-color: gray;
   box-sizing: border-box;
-   border-radius: 10px;
+  border-radius: 10px;
 }
 
 .inline {
@@ -632,7 +630,7 @@ h2 {
 }
 
 .horizontal-line-section {
-  margin-top: 15em;
+  margin-top: 5em;
   position: unset;
   display: flex;
   justify-content: space-between;
@@ -670,7 +668,6 @@ h2 {
 .rule2 {
   width: 40%;
   border-left: 60% solid rgb(159, 1, 1);
-  /* background-color: lightgray; */
 }
 
 
@@ -678,10 +675,11 @@ h2 {
 /* <!-- .....WORK SECTION..... --> */
 
 .work-section {
+  margin-top: -20em;
   height: auto;
   width: 100%;
-  background-image:  radial-gradient(rgb(255, 177, 33), rgb(225, 129, 12), rgb(186, 96, 0));
-  padding-bottom: 50px;
+  /* background-color: rgb(215, 246, 216); */
+  padding-bottom: 10px;
 }
 
 .work-container {
@@ -696,19 +694,17 @@ h2 {
 }
 
 .work {
-  margin: 3em auto;
+  margin: 1.5em auto;
 }
 
 
 .work-box-grid-container{
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  /* background-color: burlywood; */
   width: 95%;
   height: 95%;
   padding: 0;
-  padding-left: 7em;
-  margin: auto;
+  align-content: center;
 }
 
 .work-1 {
@@ -717,17 +713,22 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin: 20px auto;
-  padding: 20px;
-  margin: 20px;
   align-items: center;
   box-shadow: 0 0 9px 1px rgb(132, 211, 177);
-  background-color: rgb(162, 228, 202);
+  background-color: rgb(228, 205, 162);
   border-radius: 12px;
   text-align: center;
+  display: grid;
+  margin: 20px auto;
+  overflow: scroll;
 }
 
-.work2 {
+.work-title, .work-description {
+  color: black;
+  padding: 5px;
+}
+
+/* .work2 {
   background-color: rgb(113, 124, 114);
 }
 
@@ -769,23 +770,27 @@ h2 {
 
 .work12 {
   background-color: rgb(162, 105, 58);
-}
+} */
 
 
 
-.work-1 .work-description, .work-title {
+/* .work-1 .work-description, .work-title {
   opacity: 0.03;
 
-}
+} */
 
 .work-1:hover  .work-description,
 .work-1:hover .work-title {
  opacity: 1;
+
 }
 
 .work-1:hover {
-  transform: scale(1.09);
+  color: white;
+  transform: scale(1.1);
  transform: skewY(20%);
+ transform: initial scaleX();
+ transition: 1s ease-in-out;
 }
 
 
@@ -860,6 +865,22 @@ h2 {
   opacity: 1;
 } */
 
+
+.opacity1 {
+  opacity: 0.3;
+}
+
+.opacity4 {
+  opacity: 0.5;
+}
+
+.opacity2 {
+  opacity: 0.6;
+}
+
+.opacity3 {
+  opacity: 0.9;
+}
 
 
 
@@ -993,10 +1014,10 @@ form {
     max-width: 100%;
     background-color: aliceblue;
     padding: 0;
-    overflow-x: unset;
+    overflow-x: hidden;
     box-sizing: border-box;
     font-size: 17px;
-    font-family: cursive;
+    font-family: Courier;
 
   }
 
@@ -1012,7 +1033,7 @@ form {
   flex-direction: column;
   width: 100%;
   padding: 0;
-  padding-top: 6rem;
+  padding-top: 1em;
   margin: 0;
   height: auto;
   align-items: center;
@@ -1029,10 +1050,11 @@ form {
   flex-direction: column;
   justify-content: space-evenly;
   /* gap: 20%; */
-  margin: 80px 10px;
+  margin: 80px 0px;
   margin-top: 5em;
-  width: 95%;
+  width: 90%;
 }
+
 
 .lower-profile {
   width: 200px;
@@ -1059,26 +1081,24 @@ form {
 .describe {
   width: 90%;
   padding: 10px;
-  height: 300px;
   overflow: hidden;
-  height: 500px;
   padding: 15px;
-  font-size: 24px;
+  font-size: 15px;
   text-align: center;
   margin: auto;
-  margin-top: 80px;
-  line-height: 35px;
+  margin-top: 10px;
+  line-height: 30px;
   display: flex;
   flex-direction: column;
   /* justify-content: space-between; */
-  height: 400px;
+  height: fit-content;
 }
 
 .icon-section-2 {
   width: 100%;
   float: right;
   width: 430px;
-  margin: 40px auto;
+  margin: 10px auto;
 }
 
 .render-2 {
@@ -1086,7 +1106,8 @@ form {
   bottom: 0;
   position: fixed;
   margin-left: 80%;
-  font-size: 50px;
+  font-size: 40px;
+  z-index: 1;
 }
 
 
@@ -1121,6 +1142,11 @@ form {
   margin-top: 2em;
 }
 
+.education span {
+  background-color: gray;
+  color: white;
+}
+
 .shorter {
   height: 10%;
 }
@@ -1142,16 +1168,20 @@ form {
   margin: 30px;
   border-radius: 12px;
   box-shadow: 0 0 7px -2px;
+  cursor: pointer;
 }
 
-.rsm-content:hover {
+/* .rsm-content:hover {
   border-color: rgb(29, 170, 189);
   transform: scale(1.2);
   transition: 1s ease-in-out;
   margin-top: 50px;
   margin-left: 60px;
-}
+} */
 
+/* .invisible {
+  display: none;
+} */
 
 
 
@@ -1166,22 +1196,27 @@ form {
 
 
 .service-section {
-  background-image: radial-gradient(rgb(255, 177, 33), rgb(225, 129, 12), rgb(186, 96, 0));
   height: auto;
   max-width: 100%;
+  margin: 0;
+  padding: 0;
   display: flex;
   margin: auto;
   flex-direction: column;
   align-items: center;
-  margin-top: 4em;
+  margin-top: 0;
   color: white;
   font-weight: 600;
   font-size: 18px;
+  background-color: rgb(222, 255, 244);
 }
 
+.my--services {
+  background-color: rgb(222, 255, 244);
+}
 
 .service-grid-container {
-  /* background-color: aquamarine; */
+  background-color: rgb(222, 255, 244);
   display: flex;
   flex-direction: column;
   width: 95%;
@@ -1196,7 +1231,8 @@ form {
   height: 220px;
   padding: 10px ;
   font-size: 18px;
-  margin: 40px auto;
+  color: black;
+  margin: 30px auto;
   border-radius: 12px;
   text-align: center;
   display: flex;
@@ -1204,9 +1240,13 @@ form {
   flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box;
-  background-color: rgb(157, 97, 1);
-  box-shadow: 0 0 8px 1px;
+  background-color: rgb(208, 255, 239);
   overflow: hidden;
+  box-shadow: 0 0 6px -1px rgb(72, 92, 86);
+}
+
+.service-title, .service-description {
+  color: black;
 }
 
 .change-icon-size {
@@ -1228,7 +1268,7 @@ form {
   flex-direction: column;
   background-color: rgb(222, 255, 244);
   align-items: center;
-  padding-top: 10em;
+  padding-top: 3em;
   margin: 0;
 }
 
@@ -1260,14 +1300,14 @@ form {
 
 
 .horizontal-line-section {
-  height: 70%;
+  height: 70vh;
   width: 100%;
   margin-top: 5em;
   margin: auto;
   padding: 0;
   margin-bottom: 0;
   background-color: aliceblue;
-  padding-bottom: 5em;
+  padding-bottom: 35em;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -1304,10 +1344,13 @@ form {
   width: 100%;
   background-image:  radial-gradient(rgb(255, 177, 33), rgb(225, 129, 12), rgb(186, 96, 0));
   padding-bottom: 50px;
+  color: white;
 }
 
 .work {
   margin: 1em auto;
+  color: white;
+  text-shadow: 2px 2px 10px;
 }
 
 .work-box-grid-container{
@@ -1318,7 +1361,7 @@ form {
   padding: 0;
   padding-left: 7em;
   margin: auto;
-  align-items: center;
+  align-items: center;color: white;
 }
 
 
@@ -1332,7 +1375,7 @@ form {
   padding: 20px;
   align-items: center;
   box-shadow: 0 0 9px 1px rgb(132, 211, 177);
-  background-color: rgb(108, 105, 74);
+  background-color: rgb(143, 106, 20);
   border-radius: 12px;
   text-align: center;
   margin-left: -10%;
@@ -1340,7 +1383,9 @@ form {
   margin-right: 35%;
 }
 
-
+.work-title, .work-description {
+  color: white;
+}
 
 
 /* .....POSTS..... */
@@ -1351,7 +1396,7 @@ form {
   /* padding: 50px; */
   background-color: rgb(238, 255, 249);
   margin-top: 0;
-  padding-top: 5em;
+  padding-top: 4em;
 }
 
 .post-top {
@@ -1395,7 +1440,6 @@ form {
   width: 205PX;
   height: 250PX;
   background-color: rgb(198, 222, 243);
-  margin: 15PX;
   border-radius: 15PX;
   display: flex;
   flex-direction: column;
@@ -1404,6 +1448,8 @@ form {
   box-sizing: border-box;
   box-shadow: 0 0 5px -1px;
   text-align: center;
+  display: grid;
+  align-content: center;
 }
 
 .under-post-container {
